deploy.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: pandoc-builder
  namespace: rudn-yamadharma
  labels:
    app: pandoc-builder

spec:
  selector:
    matchLabels:
      app: pandoc-builder
  template:
    metadata:
      labels:
        app: pandoc-builder
    spec:
      nodeSelector:
        kubernetes.io/hostname: balthazar
      containers:
        - name: pandoc-builder
          image: registry.danya02.ru/danya02/rudn-yamadharma-course/builder:latest
          imagePullPolicy: Always
          ports:
            - name: web
              containerPort: 3000
          volumeMounts:
            - name: compile-data
              mountPath: /compile
            - name: db
              mountPath: "/db"
      volumes:
        - name: db
          persistentVolumeClaim:
            claimName: db-pvc
        - name: compile-data
          persistentVolumeClaim:
            claimName: build-data-pvc
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pandoc-builder
  name: pandoc
  namespace: rudn-yamadharma
spec:
  ports:
  - name: web
    port: 3000
    protocol: TCP
    targetPort: web
  selector:
    app: pandoc-builder
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pandoc-builder
  namespace: rudn-yamadharma
spec:
  tls: {}
  entryPoints:
    - websecure
  routes:
  - match: Host(`pandoc.danya02.ru`) && PathPrefix(`/api`)
    kind: Rule
    middlewares:
      - name: remove-api-prefix
        namespace: rudn-yamadharma
    services:
    - name: pandoc
      port: web

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: remove-api-prefix
  namespace: rudn-yamadharma
spec:
  stripPrefix:
    prefixes:
      - /api

---

kind: Deployment
apiVersion: apps/v1
metadata:
  name: front
  namespace: rudn-yamadharma
  labels:
    app: front

spec:
  replicas: 1
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      nodeSelector:
        kubernetes.io/hostname: danya02.ru
      containers:
        - name: front
          image: registry.danya02.ru/danya02/rudn-yamadharma-course/front:latest
          imagePullPolicy: Always
          ports:
            - name: web
              containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: front
  name: front
  namespace: rudn-yamadharma
spec:
  ports:
  - name: web
    port: 5000
    protocol: TCP
    targetPort: web
  selector:
    app: front
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: front
  namespace: rudn-yamadharma
spec:
  tls: {}
  entryPoints:
    - websecure
  routes:
  - match: Host(`pandoc.danya02.ru`)
    kind: Rule
    services:
    - name: front
      port: web
